<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:android="http://schema  s.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.carlscrate.unl_bathroom.AveryActivity">

        <TextView
            android:id="@+id/oldfather_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/oldfather_hall"
            android:layout_marginBottom="8dp"
            android:textSize="32sp"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:src="@drawable/oldfather"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/unl_logo"
            android:id="@+id/imageView"/>

        <TextView
            android:id="@+id/oldfather_description"
            android:layout_width="271dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/oldfather_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Spinner
            android:id="@+id/avery_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:entries="@array/oldfather_floors">
        </Spinner>

        <Button
            android:id="@+id/find_avery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/find_bathrooms"/>

    </LinearLayout>

</ScrollView>
