<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.carlscrate.unl_bathroom.SendEmailActivity">

    <TextView
        android:id="@+id/title_contribute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/contribute_title"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.017"/>

    <TextView
        android:id="@+id/contribute_text"
        android:layout_width="295dp"
        android:layout_height="161dp"
        android:layout_gravity="center"
        android:text="@string/contribute_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.035"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintTop_toBottomOf="@+id/title_contribute"/>

    <Button
        android:id="@+id/send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:onClick="onClickRequest"
        android:text="@string/contribute_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.079"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintTop_toBottomOf="@+id/contribute_text"/>


</android.support.constraint.ConstraintLayout>
