<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.carlscrate.unl_bathroom.OldfatherActivity">

    <TextView
        android:id="@+id/oldfather_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="206dp"
        android:text="@string/oldfather_hall"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:src="@drawable/oldfather"
        android:contentDescription="@string/unl_logo"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.17000002"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/imageView"/>


    <TextView
        android:id="@+id/oldfather_description"
        android:layout_width="271dp"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/oldfather_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.454"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>


    <ListView
        android:id="@+id/oldfather_floors"
        android:layout_width="269dp"
        android:layout_height="212dp"
        android:entries="@array/oldfather_floors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92">

    </ListView>


</android.support.constraint.ConstraintLayout>
