<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.carlscrate.unl_bathroom.AveryActivity">

    <TextView
        android:id="@+id/avery_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="206dp"
        android:text="@string/avery_hall"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:src="@drawable/avery"
        android:contentDescription="@string/unl_logo"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.17000002"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/imageView"/>

    <TextView
        android:id="@+id/avery_description"
        android:layout_width="271dp"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/avery_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.454"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <ListView
        android:id="@+id/avery_floors"
        android:layout_width="269dp"
        android:layout_height="212dp"
        android:entries="@array/avery_floors"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.92"
        tools:layout_editor_absoluteY="282dp"
        tools:layout_editor_absoluteX="-51dp">

    </ListView>

</android.support.constraint.ConstraintLayout>
